<resources>
    <string name="app_name">NAKPORTAL143</string>
    <string name="getstarted">GET STARTED WITH AD</string>
    <string name="username">USERNAME</string>
    <string name="rememberme">REMEMBER ME</string>
    <string name="firstname">FIRST NAME</string>
    <string name="lastname">LAST NAME</string>
    <string name="email">EMAIL</string>
    <string name="terms">Accept terms conditions</string>
    <string name="LIBRARY">LIBRARY</string>
    <string name="videos">VIDEOS</string>
    <string name="books">BOOKS</string>
    <string name="CHAT">CHAT</string>
    <string name="fees">FEES</string>
    <string name="results">RESULT</string>
    <string name="EVENTS">EVENTS</string>
    <string name="ATTENDENCE">ATTENDENCE</string>
    <string name="SCHEDULE">SCHEDULE</string>
    <string name="ENROLLMENT">ENROLLMENT</string>
    <string name="items">10 ITEMS</string>
    <string name="HOMEPAGE">MY PAGE</string>
    <string name="BTECH">BTECH</string>
    <string name="mtech">MTECH</string>
    <string name="cse_btn_txt">CSE</string>
    <string name="CIVIL_BTN_TXT">CIVIL</string>
    <string name="MECH_BTN_TXT">MECH</string>
    <string name="ELECTRONICS_TXT"><![CDATA[ECE & EEE]]></string>
    <string name="C_CPLUS_PLUS"><![CDATA[C & C++]]></string>
    <string name="PYTHON">PYTHON</string>
    <string name="JAVA">JAVA</string>
    <string name="play">PLAY</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="fathers_name">FATHERS NAME</string>
    <string name="mothers_name">MOTHERS NAME</string>
    <string name="REGD_NO">REGD NO</string>
    <string name="EMAIL">EMAIL</string>
</resources>
