<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".enrollment">


    <EditText
        android:id="@+id/editText7"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginEnd="214dp"
        android:layout_marginRight="214dp"
        android:layout_marginBottom="448dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="213dp"
        android:layout_marginLeft="213dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="378dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/mothers_name" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="215dp"
        android:layout_marginRight="215dp"
        android:layout_marginBottom="378dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/fathers_name" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="211dp"
        android:layout_marginLeft="211dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="448dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="215dp"
        android:layout_marginRight="215dp"
        android:layout_marginBottom="581dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/EMAIL" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginEnd="213dp"
        android:layout_marginRight="213dp"
        android:layout_marginBottom="513dp"
        android:ems="10"
        android:hint="@string/REGD_NO"
        android:inputType="number" />

</RelativeLayout>