<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mtech_books"
    android:background="@drawable/bg123">


    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="327dp"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:contentDescription="@android:string/ok"
        app:srcCompat="@drawable/selectbranch" />

    <Button
        android:id="@+id/cse_btn_mtech"
        android:layout_width="257dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="77dp"
        android:layout_marginEnd="86dp"
        android:layout_marginRight="77dp"
        android:layout_marginBottom="382dp"
        android:background="@drawable/btn_background123"
        android:text="@string/cse_btn_txt"
        android:textSize="24sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/mech_btn_mtech"
        android:layout_width="257dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="77dp"
        android:layout_marginEnd="89dp"
        android:layout_marginRight="77dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/btn_background123"
        android:text="@string/MECH_BTN_TXT"
        android:textSize="24sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/civil_btn_mtech"
        android:layout_width="257dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="77dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="77dp"
        android:layout_marginBottom="277dp"
        android:background="@drawable/btn_background123"
        android:text="@string/CIVIL_BTN_TXT"
        android:textSize="24sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/ece_eee_btn_mtech"
        android:layout_width="257dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="77dp"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:layout_marginBottom="77dp"
        android:background="@drawable/btn_background123"
        android:text="@string/ELECTRONICS_TXT"
        android:textSize="24sp"
        android:textStyle="italic" />





</RelativeLayout>